Apartment List and Image processing

--- a/projektwohnung-site/hugo.yaml
+++ b/projektwohnung-site/hugo.yaml
@@ -2,6 +2,7 @@ baseURL: https://example.org/
 languageCode: en-us
 title: 'Projektwohnungen Petersen'
 defaultContentLanguage: de
+defaultContentLanguageInSubdir: true
 languages:
   de:
     languageName: Deutsch
